[package]
name = "pie_chart"
version = "0.1.2"
edition = "2021"
authors = ["John Lyon-Smith <john@lyon-smith.org>"]
description = "A pie chart generator"
repository = "https://github.com/jlyonsmith/pie_chart"
readme = "README.md"
keywords = []
categories = []
license = "Unlicense"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
easy-error = "1.0.0"
lazy_static = "1.4.0"
yansi = "1.0.1"
json5 = "0.4.1"
serde = { version = "1.0.203", features = ["derive"] }
rand = "0.8.5"
svg = "0.17.0"

[dev-dependencies]
criterion = "^0.5"

[[bench]]
name = "benchmarks"
harness = false

[[bin]]
name = "pie-chart"
path = "src/bin/pie_chart.rs"
